Feature - User sign in/out: complete

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,48 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div class="parallax-container">
+  <div class="parallax"><img src="/assets/analytics-hero.jpg"></div>
+</div>
+
+<div class="section white">
+
+    <h2 class="header center-align blue-grey-text text-darken-1" style="margin-top: 0; margin-bottom: 0">Blocmetrics</h2>
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-image">
+              <img src="/assets/application.jpg">
+            </div>
+            <div class="card-content">
+              <h5 class="center-align blue-grey-text text-darken-2" style="font-weight: bold; margin-top: 0">Register your application</h5>
+              <h6 class="center-align blue-grey-text text-darken-1">Associate all of your apps with one account.</h3>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-image">
+              <img src="assets/events.jpg">
+              <span class="card-title">Track events</span>
+            </div>
+            <div class="card-content">
+              <h6 class="center-align blue-grey-text text-darken-1">Track the metrics that are meaningful to you.</h3>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-image">
+              <img src="assets/graphs.jpg">
+            </div>
+            <div class="card-content">
+              <h5 class="center-align blue-grey-text text-darken-2" style="font-weight: bold; margin-top: 0">View your data</h5>
+              <h6 class="center-align blue-grey-text text-darken-1">See results in easy to understand graphs.</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+
+</div>
+
+<div class="parallax-container">
+  <div class="parallax"><img src="assets/footer.jpg"></div>
+</div>
