--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,13 +4,91 @@
     <title>Blocmetrics</title>
     <%= csrf_meta_tags %>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css', media: 'all' %>
+    <%= stylesheet_link_tag 'https://fonts.googleapis.com/icon?family=Material+Icons', media: 'all' %>
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <%# DROPDOWN STRUCTURE %>
+    <ul id="dropdown1" class="dropdown-content">
+      <li><%= link_to "My Metrics", root_path %></li>
+      <li class="divider"></li>
+      <li><%= link_to "Edit Account", edit_user_registration_path %></li>
+      <li class="divider"></li>
+      <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete, :onclick => "M.toast({html: 'Signed out successfully.', displayLength: 3000})" %></li>
+      <li class="divider"></li>
+    </ul>
+
+
+    <%# NAV BAR STRUCTURE %>
+    <div class="navbar-fixed">
+      <nav>
+        <div class="nav-wrapper blue-grey darken-4">
+          <i class="material-icons left clearfix">trending_up</i>
+          <%= link_to "Blocmetrics", root_path, :class => "brand-logo left" %>
+          <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="material-icons">menu</i></a>
+          <%# DESKTOP NAV BAR %>
+          <ul class="right hide-on-med-and-down">
+            <li><%= link_to "About", welcome_about_path %></li>
+            <% if user_signed_in? %>
+              <li><a class="dropdown-trigger" href="#" data-target="dropdown1">My Account<i class="material-icons right">arrow_drop_down</i></a></li>
+            <% else %>
+              <li><%= link_to "Sign In", new_user_session_path %></li>
+              <li><%= link_to "Sign Up", new_user_registration_path %></li>
+            <% end %>
+          </ul>
+        </div>
+      </nav>
+    </div>
+
+    <%# MOBILE NAV BAR %>
+    <ul class="sidenav" id="mobile-demo">
+      <% if user_signed_in? %>
+        <li>My Metrics</li>
+        <li class="divider"></li>
+        <li><%= link_to "Edit Account", edit_user_registration_path %></li>
+        <li class="divider"></li>
+        <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete, :onclick => "M.toast({html: 'Signed out successfully.', displayLength: 3000})" %></li>
+        <li class="divider"></li>
+      <% else %>
+        <li><%= link_to "About", welcome_about_path %></li>
+        <li class="divider"></li>
+        <li><%= link_to "Sign In", new_user_session_path %></li>
+        <li class="divider"></li>
+        <li><%= link_to "Sign Up", new_user_registration_path %></li>
+        <li class="divider"></li>
+      <% end %>
+    </ul>
+
     <%= yield %>
+
+    <%# FOOTER %>
+    <footer class="page-footer blue-grey darken-4">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Footer Content</h5>
+            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="white-text">Links</h5>
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="#!">About</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
+        © 2018 CJAdeszko
+        </div>
+      </div>
+    </footer>
+
+    <%= javascript_include_tag 'https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js' %>
   </body>
 </html>
