--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -32,12 +32,22 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Update" %>
+    <%= f.submit "Update", class: "waves-effect waves-light btn center-align", style: "margin:0 0 5px 5px" %>
   </div>
+
 <% end %>
+</div>
 
-<h3>Cancel my account</h3>
+<h4>Unhappy?</h4>
+<button class="waves-effect waves-light btn center-align orange lighten-3 white-text modal-trigger" style="margin-bottom: 5px" data-target="cancel_modal">Cancel My Account</button>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+<%# MODAL STRUCTURE %>
+<div id="cancel_modal" class="modal">
+  <div class="modal-content">
+    <h5><%= "Are you sure you wish to cancel your account?" %></h5>
+  </div>
+  <div class="modal-footer">
+    <%= link_to "No", edit_user_registration_path, class: "waves-effect waves-blue btn-flat" %>
+    <%= link_to "Yes", registration_path(resource_name), method: :delete, class: "waves-effect waves-red btn-flat" %>
+  </div>
+</div>
