Feature - Associate Events: Initial commit

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -21,9 +21,9 @@
           <div class="card">
             <div class="card-image">
               <img src="assets/events.jpg">
-              <span class="card-title">Track events</span>
             </div>
             <div class="card-content">
+              <h5 class="center-align blue-grey-text text-darken-2" style="font-weight: bold; margin-top: 0">Track events</h5>
               <h6 class="center-align blue-grey-text text-darken-1">Track the metrics that are meaningful to you.</h3>
             </div>
           </div>
