--- a/app/views/registered_applications/show.html.erb
+++ b/app/views/registered_applications/show.html.erb
@@ -1,2 +1,6 @@
 <h1 class="blue-grey-text text-darken-2"><%= @app.name %></h1>
 <h6 class="blue-grey-text text-darken-1"><%=@app.url %></h6>
+
+<% @events.each do |event| %>
+  <p><%= event[0] %> : <%= event[1].count %></p>
+<% end %>
