Feature - API Controller: complete

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,7 +68,9 @@
       <% end %>
     </ul>
 
-    <%= yield %>
+    <main>
+      <%= yield %>
+    </main>
 
     <%# FOOTER %>
     <footer class="page-footer blue-grey darken-4">
